(Fat)Jar Building & Temporary solution to resource accessing